# texicons

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  deno.json  main.rs
.devcontainer/: Dockerfile  devcontainer.json
icon-sets/: index.json
src/: iconsets2svgfont.ts  main.rs  svgfonts2ttf.ts
src/templates/: docs-table_row.tmpl  docs.tex.tmpl  mapping.tmpl  package.sty.tmpl
