[package]
name = "texicons"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
convert_case = "0.6.0"
regex = "^1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "texicons"
path = "main.rs"
