[package]
name = "texicons"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
convert_case = "0.6.0"
log = "0.4.22"
ordermap = {version = "0.5.3", features = ["serde"]}
regex = "^1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
usvg = "0.44.0"

[[bin]]
name = "texicons"
path = "src/main.rs"
